<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginBottom="30dp"

        android:outlineSpotShadowColor="@color/white"
        >

    </Button>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:src="@mipmap/logo"
        android:layout_marginBottom="20dp"




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proceed"
        android:textColor="@color/grey"
        android:layout_marginEnd="100dp"
        android:textSize="21sp"
        android:backgroundTint="@color/white"
        android:textAlignment="viewStart"
        android:outlineSpotShadowColor="@color/white"
        tools:ignore="ExtraText">



    </Button>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:textSize="26sp"
    android:textColor="@color/black"
    android:backgroundTint="@color/white"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="50dp"
    android:textAlignment="viewStart"
    android:outlineSpotShadowColor="@color/white">

</Button>




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uname"
        android:backgroundTint="@color/white"
        android:textColor="@color/grey"
        android:textSize="25sp"
        android:textAlignment="viewStart"
        android:outlineSpotShadowColor="@color/white">

    </Button>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:backgroundTint="@color/white"
        android:textColor="@color/grey"
        android:textSize="25sp"
        android:textAlignment="viewStart"
        android:layout_marginTop="25dp"
        android:outlineSpotShadowColor="@color/white">

    </Button>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp" android:layout_marginHorizontal="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/maroon"
       android:layout_marginHorizontal="30dp"
        android:textAlignment="center"
      android:outlineSpotShadowColor="@color/white">

    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forpassword"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:textAlignment="center">

    </TextView>

</LinearLayout>

